apache-php-mysql/istio/apache-php-mysql-versions.yaml
#__________________________________PHP APPS______________________________________
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: php1
  labels:
    app: php
    version: v1
spec:
  selector:
    matchLabels:
      app: php
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: php
        version: v1
    spec:
      containers:
      - name: php
        image: nour963/robot-php1
        ports:
          - containerPort: 9000        
---
apiVersion: apps/v1 
kind: Deployment
metadata:
    name: php2
    labels:
      app: php
      version: v2
spec:
    selector:
      matchLabels:
        app: php
        version: v2
    replicas: 1
    template:
      metadata:
        labels:
          app: php
          version: v2
      spec:
        containers:
        - name: php
          image: nour963/robot-php2
          ports:
           - containerPort: 9000        
---
apiVersion: v1
kind: Service
metadata:
    name: php
    labels:
      app: php
spec:
    ports:
    - port: 9000
      name: tcp
      targetPort: 9000
    selector:
      app: php
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: apache
  labels:
    app: apache
    version: v1
spec:
  selector:
    matchLabels:
      app: apache
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: apache
        version: v1
    spec:
      containers:
      - name: apache       
        image: nour963/robot-httpd
        ports:
          - containerPort: 80
        volumeMounts:
        - name: apache-conf
          mountPath: /usr/local/apache2/conf/apache.conf
          subPath: apache.conf
      volumes:
        - name: apache-conf
          configMap:
            name: apache-conf  
---
apiVersion: v1
kind: Service
metadata:
    name: apache
    labels:
      app: apache
spec:
    ports:
    - port: 80
      name: http
      targetPort: 80
    selector:
      app: apache
---
#____________________________________________MySQL APP___________________________________________
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql 
    version: v1
spec:
  selector:
    matchLabels:
      app: mysql
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
        version: v1
    spec:
      containers:
      - name: mysql      
        image: nour963/robot-mysql
        ports:
        - containerPort: 3306         
---
apiVersion: v1
kind: Service
metadata:
    name: mysql
    labels:
      app: mysql
spec:
    ports:
    - port: 3306
      name: mysql
      targetPort: 3306
    selector:
      app: mysql
---
#________________________________________________GATEWAY___________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apache-gateway
spec:
  selector:
    istio: ingressgateway           # use istio prebuilt INgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
#_____________________________________________VIRTUAL SERVICE________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: apache
spec:
    hosts:
    - "*"
    gateways:
    - apache-gateway
    http:
    - route:
      - destination:
          host: apache
          subset: v1
          port:
            number: 80
---
#_____________________________________________DESTINATION RULE________________________________________________
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apache
spec:
  host: apache
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: php
spec:
  host: php
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: mysql
spec:
    host: mysql
    subsets:
    - name: v1
      labels:
        version: v1
